# repomaker

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Vagrantfile  assets.py  org.fdroid.Repomaker.json  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  run.sh  setup.py  setup.sh  update-translations.sh
debian/: changelog  control  requirements.txt
docker/: .env  Makefile  README.md  docker-compose.yml  settings_docker.py
locale/de/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
maker/templates/maker/: index.html
maker/templates/maker/app/: index.html
maker/templates/maker/storage/: form.html
maker/tests/: test_app.py
maker/views/: app.py  gitstorage.py  screenshot.py
repomaker/: __init__.py  gui.py  settings.py  translation.py  urls.py
repomaker/locale/ca/LC_MESSAGES/: djangojs.po
repomaker/locale/de/LC_MESSAGES/: django.po  djangojs.po
repomaker/locale/es/LC_MESSAGES/: djangojs.po
repomaker/locale/es_MX/LC_MESSAGES/: django.po
repomaker/locale/fa/LC_MESSAGES/: djangojs.po
repomaker/locale/fr/LC_MESSAGES/: django.po  djangojs.po
repomaker/migrations/: 0001_b2storage_filebasestorage_rclonestorage.py  0001_initial.py  0002_categories_colors.py  default_categories.py
repomaker/models/: apk.py  apkpointer.py  app.py  backblaze.py  category.py  filebase.py  rclonesupportedstorage.py  remoteapp.py  remoterepository.py  repository.py  screenshot.py  storage.py
repomaker/tests/: __init__.py  test_urls.py
repomaker/tests/models/: test_app.py  test_category.py  test_remoteapp.py  test_remoterepository.py  test_repository.py  test_screenshot.py  test_storage.py
repomaker/tests/views/: test_app.py  test_repository.py  test_storage.py
repomaker/views/: __init__.py  apk.py  app.py  b2storage.py  filebasestorage.py  forms.py  gitstorage.py  multiplefileupload.py  rclonesupportedstorage.py  remoterepository.py  repository.py  s3storage.py  screenshot.py  sshstorage.py  storage.py
tests/: test-pylint.sh
(+39 files in other folders)
